@@ -1,6 +1,11 @@
 Changelog file for omnibook package:
 ------------------------------------
 
+2.XXXXXXXX Mathieu Bérard <math_b@users.sourceforge.net>
+* Disable Acer support, acerhk module should provided better
+  support with a far more complete autodetection database
+  (see http://www2.informatik.hu-berlin.de/~tauber/acerhk/)
+
 2.20060921 Mathieu Bérard <math_b@users.sourceforge.net>
 * The minimal required kernel version is now 2.6.9 (kref API)
 * Convert semaphore to mutex with fallback for pre 2.6.16 kernel
